[gd_scene load_steps=32 format=2]

[ext_resource path="res://src/room_shell.gd" type="Script" id=1]
[ext_resource path="res://img/living-room/background.png" type="Texture" id=2]
[ext_resource path="res://src/Door.gd" type="Script" id=3]
[ext_resource path="res://img/ui/arrow.png" type="Texture" id=4]
[ext_resource path="res://src/LockedOpernable.gd" type="Script" id=5]
[ext_resource path="res://img/living-room/backpack_hook.png" type="Texture" id=6]
[ext_resource path="res://img/living-room/vine_extended.png" type="Texture" id=7]
[ext_resource path="res://src/PickupItem.gd" type="Script" id=8]
[ext_resource path="res://img/living-room/backpack_final_small.png" type="Texture" id=9]
[ext_resource path="res://img/living-room/backpack_final.png" type="Texture" id=10]
[ext_resource path="res://src/FrontDoor.gd" type="Script" id=11]
[ext_resource path="res://src/clickable.gd" type="Script" id=12]
[ext_resource path="res://img/living-room/fire_mask_glow.png" type="Texture" id=13]
[ext_resource path="res://src/FireLight.gd" type="Script" id=14]
[ext_resource path="res://img/stool_sketch.png" type="Texture" id=15]
[ext_resource path="res://src/shaders/phantom_stool.shader" type="Shader" id=16]
[ext_resource path="res://src/StoolSpot.gd" type="Script" id=17]
[ext_resource path="res://img/stool_sketch_smol.png" type="Texture" id=18]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 86.4009, 257 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 137.801, 255.8 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 88.6812, 124.688 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 58.4486, 73.1813 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 139.964, 201.501 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 22.3111, 22.6504 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 140.493, 34.5527 )

[sub_resource type="OccluderPolygon2D" id=10]
polygon = PoolVector2Array( -69.5605, 46.1689, -64.8401, 51.2388, -51.9031, 50.8891, -58.3716, 45.4695 )

[sub_resource type="OccluderPolygon2D" id=11]
polygon = PoolVector2Array( -15.8892, 60.6793, 8.18799, 62.29, -6.41162, 68.1298 )

[sub_resource type="OccluderPolygon2D" id=12]
polygon = PoolVector2Array( 52.5706, 48.5665, 68.3379, 45.9386, 58.4102, 40.9747 )

[sub_resource type="OccluderPolygon2D" id=13]
polygon = PoolVector2Array( 13.4438, 44.4786, 4.97607, 51.1944, -4.65967, 47.3985, 2.34814, 42.1427 )

[sub_resource type="ShaderMaterial" id=8]
shader = ExtResource( 16 )
shader_param/Texture = ExtResource( 15 )

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 71.0562, 66.4996 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )
room_width = 3000

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
centered = false

[node name="BedroomDoor" type="Area2D" parent="."]
position = Vector2( 68, 295 )
script = ExtResource( 3 )
to_room = "bedroom"
initial_camera_x = -1000.0

[node name="Arrow" type="Sprite" parent="BedroomDoor"]
visible = false
position = Vector2( 35.4487, 17.6325 )
texture = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="BedroomDoor"]
position = Vector2( 8, 7 )
shape = SubResource( 1 )

[node name="KitchenDoor" type="Area2D" parent="."]
position = Vector2( 2900, 295 )
script = ExtResource( 3 )
to_room = "kitchen"

[node name="Arrow" type="Sprite" parent="KitchenDoor"]
visible = false
position = Vector2( -41, -29 )
texture = ExtResource( 4 )
flip_h = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="KitchenDoor"]
position = Vector2( -35, -39 )
shape = SubResource( 2 )

[node name="BranchHook" type="Area2D" parent="."]
position = Vector2( 1838.58, 132.127 )
script = ExtResource( 5 )
before_backpack = true
item_text = {
"cup": "|Ppat_sad|The cup is empty.",
"liquor": "|Ppat_sad|It wouldn't like that.",
"potion": "I think it wants water."
}
item_name = "Backpack"
required_item_id = "water_cup"
consume_item = true
locked_text = [ "|Ppat_sad|The hook I hang my backpack on has", "grown around the hanger.  I can't get it.", "", "|Ppat_normal|Maybe it would like some water?" ]

[node name="State1" type="Sprite" parent="BranchHook"]
position = Vector2( 44.6504, 114.593 )
scale = Vector2( 0.125556, 0.125556 )
texture = ExtResource( 6 )

[node name="State2" type="Sprite" parent="BranchHook"]
visible = false
position = Vector2( 51.4307, 113.405 )
scale = Vector2( 0.126497, 0.126497 )
texture = ExtResource( 7 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="BranchHook"]
position = Vector2( 49.2677, 71.662 )
shape = SubResource( 3 )

[node name="Backpack" type="Area2D" parent="BranchHook"]
visible = false
position = Vector2( -26.8733, 220.585 )
script = ExtResource( 8 )
before_backpack = true
lines = [ "|Ppat_normal|My backpack!", "Now I need something to eat on the journey." ]
item_id = "backpack"
item_sprite = ExtResource( 9 )

[node name="Sprite" type="Sprite" parent="BranchHook/Backpack"]
position = Vector2( 45.0859, 28.6316 )
scale = Vector2( 0.128208, 0.128208 )
texture = ExtResource( 10 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="BranchHook/Backpack"]
position = Vector2( 45.9086, 30.2324 )
shape = SubResource( 4 )

[node name="FrontDoor" type="Area2D" parent="."]
position = Vector2( 1203.7, 309.043 )
script = ExtResource( 11 )
before_backpack = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="FrontDoor"]
position = Vector2( -17.9155, -10.0775 )
shape = SubResource( 5 )

[node name="Skull" type="Area2D" parent="."]
position = Vector2( 541.788, 251.51 )
script = ExtResource( 12 )
before_backpack = true
lines = [ "|Ppat_normal|I think he's pretty cool." ]
item_text = {
"liquor": "|Ppat_sad|I'm afraid of what he might do if I gave him some...",
"water_cup": "|Ppat_normal|He's not thirsty."
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Skull"]
position = Vector2( -0.487671, -1.46303 )
shape = SubResource( 6 )

[node name="Books" type="Area2D" parent="."]
position = Vector2( 421.002, 97.3745 )
script = ExtResource( 12 )
before_backpack = true
lines = [ "|Ppat_normal|Lots of stories of adventures!" ]
item_text = {
"water_cup": "That would ruin the books."
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Books"]
position = Vector2( -9.24268, 4.40128 )
shape = SubResource( 7 )

[node name="FireplaceLight" type="Light2D" parent="."]
position = Vector2( 2295.36, 312.152 )
texture = ExtResource( 13 )
offset = Vector2( -234.99, 12.6266 )
color = Color( 0.886275, 0.239216, 0.133333, 1 )
mode = 2
range_z_max = 99
shadow_enabled = true
script = ExtResource( 14 )

[node name="StoolSpot" type="Area2D" parent="."]
position = Vector2( 2169.55, 345.565 )
z_index = 100
script = ExtResource( 17 )
stool_item_texture = ExtResource( 18 )

[node name="StoolSprite" type="Sprite" parent="StoolSpot"]
visible = false
texture = ExtResource( 15 )

[node name="LightOccluder2D" type="LightOccluder2D" parent="StoolSpot/StoolSprite"]
occluder = SubResource( 10 )

[node name="LightOccluder2D2" type="LightOccluder2D" parent="StoolSpot/StoolSprite"]
occluder = SubResource( 11 )

[node name="LightOccluder2D3" type="LightOccluder2D" parent="StoolSpot/StoolSprite"]
occluder = SubResource( 12 )

[node name="LightOccluder2D4" type="LightOccluder2D" parent="StoolSpot/StoolSprite"]
occluder = SubResource( 13 )

[node name="StoolPlaceholder" type="Sprite" parent="StoolSpot"]
visible = false
material = SubResource( 8 )
texture = ExtResource( 15 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="StoolSpot"]
shape = SubResource( 9 )
[connection signal="input_event" from="BedroomDoor" to="BedroomDoor" method="_on_Door_input_event"]
[connection signal="mouse_entered" from="BedroomDoor" to="BedroomDoor" method="_on_Door_mouse_entered"]
[connection signal="mouse_exited" from="BedroomDoor" to="BedroomDoor" method="_on_Door_mouse_exited"]
[connection signal="input_event" from="KitchenDoor" to="KitchenDoor" method="_on_Door_input_event"]
[connection signal="mouse_entered" from="KitchenDoor" to="KitchenDoor" method="_on_Door_mouse_entered"]
[connection signal="mouse_exited" from="KitchenDoor" to="KitchenDoor" method="_on_Door_mouse_exited"]
[connection signal="input_event" from="BranchHook" to="BranchHook" method="_on_Openable_input_event"]
[connection signal="input_event" from="BranchHook/Backpack" to="BranchHook/Backpack" method="_on_PickupItem_input_event"]
[connection signal="input_event" from="FrontDoor" to="FrontDoor" method="_on_Clickable_input_event"]
[connection signal="input_event" from="Skull" to="Skull" method="_on_Clickable_input_event"]
[connection signal="input_event" from="Books" to="Books" method="_on_Clickable_input_event"]
[connection signal="input_event" from="StoolSpot" to="StoolSpot" method="_on_StoolSpot_input_event"]
[connection signal="mouse_entered" from="StoolSpot" to="StoolSpot" method="_on_StoolSpot_mouse_entered"]
[connection signal="mouse_exited" from="StoolSpot" to="StoolSpot" method="_on_StoolSpot_mouse_exited"]
